--- a/hu_ol_69.adoc
+++ b/hu_ol_69.adoc
@@ -4,7 +4,6 @@ permalink: hu_ol_69.html
 keywords: host utilities, oracle, linux, 6.9, netapp, ontap
 summary: Describes how to use Oracle Linux 6.9 with ONTAP
 ---
-
 = Use Oracle Linux 6.9 with ONTAP
 :hardbreaks:
 :toclevels: 1
@@ -123,4 +122,5 @@ The Oracle Linux 6.9 with ONTAP release has the following known issues:
 
 NOTE: For Oracle Linux RHCK known issues, see the link:hu_rhel_69.html#known-problems-and-limitations[known issues] for RHEL 6.9.
 
+// 2025 JUN 30, ONTAPDOC-3068
 // 2024 SEP 2, ONTAPDOC-2345
