--- a/hu_centos_76.adoc
+++ b/hu_centos_76.adoc
@@ -49,4 +49,5 @@ include::_include/hu/use-linux-host-utilities.adoc[]
 
 include::_include/hu/asm-mirroring.adoc[]
 
+// 2025 JUN 30, ONTAPDOC-3068
 // BURT 1440718, 2022-05-20
