--- a/hu_centos_80.adoc
+++ b/hu_centos_80.adoc
@@ -42,3 +42,5 @@ For CentOS Red Hat compatible kernel known issues, see the link:hu_rhel_80.html#
 include::_include/hu/use-linux-host-utilities.adoc[]
 
 include::_include/hu/asm-mirroring.adoc[]
+
+// 2025 JUN 30, ONTAPDOC-3068
