--- a/hu_centos_84.adoc
+++ b/hu_centos_84.adoc
@@ -41,3 +41,5 @@ There are no known issues.
 include::_include/hu/use-linux-host-utilities.adoc[]
 
 include::_include/hu/asm-mirroring.adoc[]
+
+// 2025 JUN 30, ONTAPDOC-3068
