--- a/hu_ol_64.adoc
+++ b/hu_ol_64.adoc
@@ -4,7 +4,6 @@ permalink: hu_ol_64.html
 keywords: host utilities, oracle, linux, 6.4, netapp, ontap
 summary: Describes how to use Oracle Linux 6.4 with ONTAP
 ---
-
 = Use Oracle Linux 6.4 with ONTAP
 :hardbreaks:
 :toclevels: 1
@@ -19,8 +18,6 @@ You can use the ONTAP SAN host configuration settings to configure Oracle Linux 
 == Install the Linux Host Utilities
 
 include::_include/hu/reuse_hu_installing_luhu_with32.adoc[]
-
-include::_include/hu/reuse_hu_cloud_note.adoc[]
 
 == SAN Toolkit
 
@@ -181,4 +178,5 @@ This issue is seen with following version:
 
 NOTE: For Oracle Linux RHCK known issues, see the link:hu_rhel_64.html#known-problems-and-limitations[known issues] for RHEL 6.4.
 
+// 2025 JUN 30, ONTAPDOC-3068
 // 2024 SEP 2, ONTAPDOC-2345
