--- a/hu_ol_67.adoc
+++ b/hu_ol_67.adoc
@@ -4,7 +4,6 @@ permalink: hu_ol_67.html
 keywords: host utilities, oracle, linux, 6.7, netapp, ontap
 summary: Describes how to use Oracle Linux 6.7 with ONTAP
 ---
-
 = Use Oracle Linux 6.7 with ONTAP
 :hardbreaks:
 :toclevels: 1
@@ -114,3 +113,4 @@ There are no known issues for the Oracle Linux 6.7 with ONTAP release.
 
 NOTE: For Oracle Linux RHCK known issues, see the link:hu_rhel_67.html#known-problems-and-limitations[known issues] for RHEL 6.7.
 
+// 2025 JUN 30, ONTAPDOC-3068
