Remove duplicate include file and update file summary

--- a/hu-rhel-96.adoc
+++ b/hu-rhel-96.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu-rhel-96.html
 keywords: host utilities, red hat, rhel, linux, 9.6, netapp, ontap, rhel 
-summary: Install the Linux Host Utilities on a RHEL 9.6 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
+summary: Install Linux Host Utilities on a RHEL 9.6 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure RHEL 9.6 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
