--- a/hu_rhel_90.adoc
+++ b/hu_rhel_90.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_rhel_90.html
 keywords: host utilities, red hat, rhel, linux, 9.0, netapp, ontap
-summary: Install the Linux Host Utilities on a RHEL 9.0 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
+summary: Install Linux Host Utilities on a RHEL 9.0 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure RHEL 9.0 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
