--- a/hu-rockylinux-10.adoc
+++ b/hu-rockylinux-10.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu-rockylinux-10.html
 keywords: host utilities, rocky, linux, 10, netapp, ontap 
-summary: Install the Linux Host Utilities on a Rocky Linux 10 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
+summary: Install Linux Host Utilities on a Rocky Linux 10 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure Rocky Linux 10 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
@@ -13,7 +13,7 @@ summary: Install the Linux Host Utilities on a Rocky Linux 10 host to manage FCP
 :imagesdir: ./media/
 
 [.lead]
-The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on a Rocky Linux 10 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
+The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you Install Linux Host Utilities on a Rocky Linux 10 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
 
 include::_include/hu/linux-configure-kvm-note.adoc[]
 
