--- a/hu-rockylinux-95.adoc
+++ b/hu-rockylinux-95.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu-rockylinux-95.html
 keywords: host utilities, rocky, linux, 9.5, netapp, ontap, fcp, iscsi
-summary: Install the Linux Host Utilities on a Rocky Linux 9.5 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
+summary: Install Linux Host Utilities on a Rocky Linux 9.5 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure Rocky Linux 9.5 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
@@ -13,11 +13,11 @@ summary: Install the Linux Host Utilities on a Rocky Linux 9.5 host to manage FC
 :imagesdir: ./media/
 
 [.lead]
-The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on a Rocky Linux 9.5 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
+The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you Install Linux Host Utilities on a Rocky Linux 9.5 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
 
 include::_include/hu/rhel-configure-kvm-note.adoc[]
 
-include::_include/hu/enable-san-boot-linux.adoc[]
+include::_include/hu/linux-enable-san-boot.adoc[]
 
 include::_include/hu/install-linux-host-utilities.adoc[]
 
