--- a/hu_ol_70.adoc
+++ b/hu_ol_70.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_ol_70.html
 keywords: host utilities, oracle, linux, 7.0, netapp, ontap
-summary: Describes how to use Oracle Linux 7.0 with ONTAP
+summary:  Install the Linux Host Utilities on an Oracle Linux 7.0 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure Oracle Linux 7.0 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
