--- a/hu_ol_71.adoc
+++ b/hu_ol_71.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_ol_71.html
 keywords: Host Utilities, oracle, linux, 7.1, netapp, ontap
-summary: Describes how to use Oracle Linux 7.1 with ONTAP
+summary: Install Linux Host Utilities on an Oracle Linux 7.1 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure Oracle Linux 7.1 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
