--- a/hu_ol_75.adoc
+++ b/hu_ol_75.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_ol_75.html
 keywords: host utilities, oracle, linux, 7.5, netapp, ontap
-summary: Describes how to use Oracle Linux 7.5 with ONTAP
+summary: Install Linux Host Utilities on an Oracle Linux 7.5 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure Oracle Linux 7.5 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
