--- a/hu_ol_77.adoc
+++ b/hu_ol_77.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_ol_77.html
 keywords: host utilities, oracle, linux, 7.7, netapp, ontap
-summary: Describes how to use Oracle Linux 7.7 with ONTAP
+summary: Install Linux Host Utilities on an Oracle Linux 7.7 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure Oracle Linux 7.7 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
