--- a/hu_ol_78.adoc
+++ b/hu_ol_78.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_ol_78.html
 keywords: host utilities, oracle, linux, 7.8, netapp, ontap
-summary: Describes how to use Oracle Linux 7.8 with ONTAP
+summary: Install Linux Host Utilities on an Oracle Linux 7.8 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure Oracle Linux 7.8 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
