--- a/hu_ol_81.adoc
+++ b/hu_ol_81.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_ol_81.html
 keywords: host utilities, oracle, linux, 8.1, netapp, ontap
-summary: Describes how to use Oracle Linux 8.1 with ONTAP
+summary: Install Linux Host Utilities on an Oracle Linux 8.1 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure Oracle Linux 8.1 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
