--- a/hu_ol_83.adoc
+++ b/hu_ol_83.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_ol_83.html
 keywords: host utilities, oracle, linux, 8.3, netapp, ontap
-summary: Describes how to use Oracle Linux 8.3 with ONTAP
+summary: Install Linux Host Utilities on an Oracle Linux 8.3 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure Oracle Linux 8.3 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
