--- a/hu_ol_84.adoc
+++ b/hu_ol_84.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_ol_84.html
 keywords: host utilities, oracle, linux, 8.4, netapp, ontap
-summary: Configure Oracle Linux 8.4 for FCP and iSCSI with ONTAP storage
+summary: Install Linux Host Utilities on an Oracle Linux 8.4 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure Oracle Linux 8.4 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
