--- a/hu_ol_88.adoc
+++ b/hu_ol_88.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_ol_88.html
 keywords: host utilities, oracle, linux, 8.8, netapp, ontap
-summary: Install the Linux Host Utilities on an Oracle Linux 8.8 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
+summary: Install Linux Host Utilities on an Oracle Linux 8.8 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure Oracle Linux 8.8 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
