--- a/hu_ol_90.adoc
+++ b/hu_ol_90.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_ol_90.html
 keywords: host utilities, oracle, linux, 9.0, netapp, ontap
-summary: Install the Linux Host Utilities on an Oracle Linux 9.0 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
+summary: Install Linux Host Utilities on an Oracle Linux 9.0 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure Oracle Linux 9.0 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
