--- a/hu_rhel_70.adoc
+++ b/hu_rhel_70.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_rhel_70.html
 keywords: host utilities, red hat, rhel, linux, 7.0, netapp, ontap
-summary: Install the Linux Host Utilities on a RHEL 7.0 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
+summary: Install Linux Host Utilities on a RHEL 7.0 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure RHEL 7.0 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
