--- a/hu_rhel_75.adoc
+++ b/hu_rhel_75.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_rhel_75.html
 keywords: host utilities, red hat, rhel, linux, 7.5, netapp, ontap
-summary: Install the Linux Host Utilities on a RHEL 7.5 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
+summary: Install Linux Host Utilities on a RHEL 7.5 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure RHEL 7.5 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
