--- a/hu_rhel_77.adoc
+++ b/hu_rhel_77.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_rhel_77.html
 keywords: host utilities, red hat, rhel, linux, 7.7, netapp, ontap, netapp
-summary: Install the Linux Host Utilities on a RHEL 7.7 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
+summary: Install Linux Host Utilities on a RHEL 7.7 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure RHEL 7.7 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
