--- a/hu_rhel_81.adoc
+++ b/hu_rhel_81.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_rhel_81.html
 keywords: host utilities, red hat, rhel, linux, 8.1, netapp, ontap
-summary: Install the Linux Host Utilities on a RHEL 8.1 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
+summary: Install Linux Host Utilities on a RHEL 8.1 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure RHEL 8.1 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
