--- a/hu_rhel_82.adoc
+++ b/hu_rhel_82.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_rhel_82.html
 keywords: host utilities, red hat, rhel, linux, 8.2, netapp, ontap
-summary: Install the Linux Host Utilities on a RHEL 8.2 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
+summary: Install Linux Host Utilities on a RHEL 8.2 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure RHEL 8.2 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
