--- a/hu_rhel_93.adoc
+++ b/hu_rhel_93.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_rhel_93.html
 keywords: host utilities, red hat, rhel, linux, 9.3, netapp, ontap, rhel 
-summary: Install the Linux Host Utilities on a RHEL 9.3 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
+summary: Install Linux Host Utilities on a RHEL 9.3 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure RHEL 9.3 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
