--- a/hu_sles_12SP4.adoc
+++ b/hu_sles_12SP4.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_sles_12SP4.html
 keywords: host utilities, suse linux enterprise server 12 SP4, suse, linux, 12 SP4, netapp, ontap
-summary: Install the Linux Host Utilities on a SUSE Linux Enterprise Server 12 SP4 to manage FCP and iSCSI protocol operations with ONTAP LUNs.
+summary: Install Linux Host Utilities on a SUSE Linux Enterprise Server 12 SP4 to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure SUSE Linux Enterprise Server 12 SP4 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
