--- a/hu_ol_70.adoc
+++ b/hu_ol_70.adoc
@@ -2,11 +2,11 @@
 sidebar: sidebar
 permalink: hu_ol_70.html
 keywords: host utilities, oracle, linux, 7.0, netapp, ontap
-summary:  Install the Linux Host Utilities on an Oracle Linux 7.0 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
+summary: Install Linux Host Utilities on an Oracle Linux 7.0 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure Oracle Linux 7.0 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
-:toclevels: 1P
+:toclevels: 1
 :nofooter:
 :icons: font
 :linkattrs:
