--- a/hu-rockylinux-92.adoc
+++ b/hu-rockylinux-92.adoc
@@ -13,7 +13,7 @@ summary: Install Linux Host Utilities on a Rocky Linux 9.2 host to manage FCP an
 :imagesdir: ./media/
 
 [.lead]
-The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you Install Linux Host Utilities on a Rocky Linux 9.2 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
+The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install Linux Host Utilities on a Rocky Linux 9.2 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
 
 include::_include/hu/rhel-configure-kvm-note.adoc[]
 
