--- a/hu_ol_78.adoc
+++ b/hu_ol_78.adoc
@@ -6,7 +6,7 @@ summary: Install Linux Host Utilities on an Oracle Linux 7.8 host to manage FCP 
 ---
 = Configure Oracle Linux 7.8 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
-:toclevels: 1P
+:toclevels: 1
 :nofooter:
 :icons: font
 :linkattrs:
