Fix lipi errors

--- a/hu-rockylinux-810.adoc
+++ b/hu-rockylinux-810.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu-rockylinux-810.html
 keywords: host utilities, rocky, linux, 8.10, netapp, ontap, fcp, iscsi
-install-linux-host-utilities a Rocky Linux 8.10 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
+summary: Install Linux Host Utilities on a Rocky Linux 8.10 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure Rocky Linux 8.10 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
