--- a/nvme-ol-95.adoc
+++ b/nvme-ol-95.adoc
@@ -364,7 +364,7 @@ systemd[1]: Finished Auto-connect to subsystems on FC-NVME devices found during 
 ----
 ====
 
-== Step 6: Verify your NVMe configuration
+== Step 6: Configure NVMe/TCP
 
 include::_include/nvme/reuse-nvme-configure-nvme-tcp.adoc[]
 
@@ -485,8 +485,10 @@ nvme discover -t tcp -w host-traddr -a traddr
 You should see an output similar to the following example:
 +
 ----
-nvme discover -t tcp -w 192.168.166.4 -a 192.168.166.56
-nvme discover -t tcp -w 192.168.165.3 -a 192.168.165.56
+nvme discover -t tcp -w 192.168.166.4 -a 192.168.166.8
+nvme discover -t tcp -w 192.168.165.3 -a 192.168.165.8
+nvme discover -t tcp -w 192.168.166.4 -a 192.168.166.9
+nvme discover -t tcp -w 192.168.165.3 -a 192.168.165.9
 ----
 
 . Run the `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes:
@@ -507,10 +509,16 @@ nvme	connect-all	-t	tcp	-w	192.168.166.4	-a	192.168.166.9
 ----
 +
 [NOTE]
-The default setting for the NVMe/TCP `ctrl_loss_tmo timeout` is turned off and there are no limits on the number of retries (indefinite retry). Consequestnly, you don't have to manually configure a specific `ctrl_loss_tmo timeout` duration when using the `nvme connect` or `nvme connect-all` commands (option -l ). With this default behavior, the NVMe/TCP controllers don't experience timeouts in the event of a path failure and remain connected indefinitely.
+====
+Beginning with Oracle Linux 9.4, the setting for the NVMe/TCP `ctrl_loss_tmo timeout` is automatically set to "off". As a result of this default setting:
+
+* There are no limits on the number of retries (indefinite retry).
+* You don't have to manually configure a specific `ctrl_loss_tmo timeout` duration when using the `nvme connect` or `nvme connect-all` commands (option -l ).
+* The NVMe/TCP controllers don't experience timeouts in the event of a path failure and remain connected indefinitely.
+====
 
 
-== Step 7: Configure NVMe/TCP
+== Step 7: Validate NVMe-oF
 
 include::_include/nvme/reuse-nvme-validate-nvme-of.adoc[]
 
@@ -683,8 +691,6 @@ nvme netapp ontapdevices -o json
 ====
 --
 =====
-
-
 
 == Step 8: Set up secure in-band authentication
 
