--- a/nvme_ol_94.adoc
+++ b/nvme_ol_94.adoc
@@ -334,8 +334,13 @@ nvme connect-all -t tcp -w 192.168.165.3 -a 192.168.165.56
 ----
 +
 [NOTE]
-Beginning with Oracle Linux 9.4, the default setting for the NVMe/TCP `ctrl_loss_tmo timeout` is turned off and there are no limits on the number of retries (indefinite retry). 
-You don't have to manually configure a specific `ctrl_loss_tmo timeout` duration when using the `nvme connect` or `nvme connect-all` commands (option -l ). With this default behavior, the NVMe/TCP controllers don't experience timeouts in the event of a path failure and remain connected indefinitely.
+====
+Beginning with Oracle Linux 9.4, the setting for the NVMe/TCP `ctrl_loss_tmo timeout` is automatically set to "off". As a result of this default setting:
+
+* There are no limits on the number of retries (indefinite retry).
+* You don't have to manually configure a specific `ctrl_loss_tmo timeout` duration when using the `nvme connect` or `nvme connect-all` commands (option -l ).
+* The NVMe/TCP controllers don't experience timeouts in the event of a path failure and remain connected indefinitely.
+====
 
 
 == Validate NVMe-oF
