--- a/nvme-rhel-96.adoc
+++ b/nvme-rhel-96.adoc
@@ -278,6 +278,12 @@ include::_include/nvme/verify-nvme-services.adoc[]
 
 include::_include/nvme/nvme-configure-nvme-tcp.adoc[]
 
+[NOTE]
+====
+Beginning with RHEL 9.4, the setting for the NVMe/TCP `ctrl_loss_tmo timeout` is automatically set to "off". As a result:
+
+include::_include/nvme/ctrl-loss-tmo-default-off.adoc[]
+====
 
 == Step 7: Validate NVMe-oF
 
