--- a/nvme-rockylinux-10.adoc
+++ b/nvme-rockylinux-10.adoc
@@ -27,7 +27,7 @@ For additional details on supported configurations, see the link:https://mysuppo
 * Features available:
 ** Beginning with Rocky Linux 10, native NVMe multipathing is always enabled, and DM multipath support for NVMe-oF is not supported.
 * Known limitations: 
-** Avoid issuing the `nvme disconnect-all` command on systems booting from SAN over NVMe-TCP or NVMe-FC namespaces, as it disconnects both root and data filesystems and may lead to system instability.
+** Avoid issuing the `nvme disconnect-all` command on systems booting from SAN over NVMe-TCP or NVMe-FC namespaces, as it disconnects both root and data filesystems and might lead to system instability.
 
 == Step 1: Optionally, enable SAN booting
 
