--- a/nvme-ol-95.adoc
+++ b/nvme-ol-95.adoc
@@ -142,7 +142,7 @@ Configure NVMe/FC for a Broadcom/Emulex adapter.
 
 .Steps
 
-. Verify that you are using the supported adapter model:
+. Verify that you're using the supported adapter model:
 
 .. Display the model names:
 +
