--- a/nvme-ol-95.adoc
+++ b/nvme-ol-95.adoc
@@ -132,7 +132,7 @@ If the `hostnqn` strings don't match, you can use the `vserver modify` command t
 
 == Step 3: Configure NVMe/FC
 
-Cconfigure NVMe/FC with Broadcom/Emulex FC or Marvell/Qlogic FC adapters.
+Configure NVMe/FC with Broadcom/Emulex FC or Marvell/Qlogic FC adapters.
 
 [role="tabbed-block"]
 ====
